log/build_2022-12-08_02-10-42/cam_subscriber/stdout_stderr.log
running egg_info
writing ../../build/cam_subscriber/cam_subscriber.egg-info/PKG-INFO
writing dependency_links to ../../build/cam_subscriber/cam_subscriber.egg-info/dependency_links.txt
writing entry points to ../../build/cam_subscriber/cam_subscriber.egg-info/entry_points.txt
writing requirements to ../../build/cam_subscriber/cam_subscriber.egg-info/requires.txt
writing top-level names to ../../build/cam_subscriber/cam_subscriber.egg-info/top_level.txt
reading manifest file '../../build/cam_subscriber/cam_subscriber.egg-info/SOURCES.txt'
writing manifest file '../../build/cam_subscriber/cam_subscriber.egg-info/SOURCES.txt'
running build
running build_py
copying cam_subscriber/AprilTag_Cam_Subscriber.py -> /home/april/workAreas/apriltag_ws/build/cam_subscriber/build/lib/cam_subscriber
running install
running install_lib
copying /home/april/workAreas/apriltag_ws/build/cam_subscriber/build/lib/cam_subscriber/AprilTag_Cam_Subscriber.py -> /home/april/workAreas/apriltag_ws/install/cam_subscriber/lib/python3.8/site-packages/cam_subscriber
byte-compiling /home/april/workAreas/apriltag_ws/install/cam_subscriber/lib/python3.8/site-packages/cam_subscriber/AprilTag_Cam_Subscriber.py to AprilTag_Cam_Subscriber.cpython-38.pyc
  File "/home/april/workAreas/apriltag_ws/install/cam_subscriber/lib/python3.8/site-packages/cam_subscriber/AprilTag_Cam_Subscriber.py", line 49
    bool detected = False;
         ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/april/workAreas/apriltag_ws/install/cam_subscriber/lib/python3.8/site-packages/cam_subscriber-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/cam_subscriber/cam_subscriber.egg-info to /home/april/workAreas/apriltag_ws/install/cam_subscriber/lib/python3.8/site-packages/cam_subscriber-0.0.0-py3.8.egg-info
running install_scripts
Installing listener script to /home/april/workAreas/apriltag_ws/install/cam_subscriber/lib/cam_subscriber
writing list of installed files to '/home/april/workAreas/apriltag_ws/build/cam_subscriber/install.log'
